# custom-docs-mcp

./: .gitignore  .mcp.json.example  CLAUDE.md  CONTEXT.md  Dockerfile  LICENSE  README.md  config.example.yaml  manifest.json  pyproject.toml
.github/workflows/: release.yml
docs/: architecture.md  configuration.md  development.md  installation.md  usage.md
server/: main.py
src/docs_mcp/: __main__.py  app.py  config.py  db.py  embeddings.py  fetcher.py  parser.py  search.py  server.py
